--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,9 @@
 # Daftar ENV
 
 # Untuk settingan database, saat ini kita pakenya sqlite dulu hehehe
-SUPABASE_URL=
+SUPABASE_URL='https://ingrabnokygjlbmphwub.supabase.co'
 SUPABASE_ANON_KEY=
 
 
-SPOTIFY_CLIENT_ID=
-SPOTIFY_CLIENT_SECRET=
+SPOTIFY_CLIENT_ID='de09d260fd8f46d6a3ec85983c781ac8'
+SPOTIFY_CLIENT_SECRET='a2fa16f71a014b008815268fb47203b7'
