--- a/.env
+++ b/.env
@@ -7,3 +7,5 @@ SUPABASE_ANON_KEY=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsI
 
 SPOTIFY_CLIENT_ID=de09d260fd8f46d6a3ec85983c781ac8
 SPOTIFY_CLIENT_SECRET=a2fa16f71a014b008815268fb47203b7
+
+DATABASE_url=postgresql://postgres.ingrabnokygjlbmphwub:[YOUR-PASSWORD]@aws-0-ap-southeast-1.pooler.supabase.com:6543/postgres
