--- a/.env
+++ b/.env
@@ -11,3 +11,9 @@ SPOTIFY_CLIENT_SECRET=a2fa16f71a014b008815268fb47203b7
 # Database Configuration
 DATABASE_URL=postgresql://postgres:[YOUR-PASSWORD]@db.ingrabnokygjlbmphwub.supabase.co:5432/postgres
 });
+
+
+import { createClient } from '@supabase/supabase-js'
+const supabaseUrl = 'https://ingrabnokygjlbmphwub.supabase.co'
+const supabaseKey = process.env.SUPABASE_KEY
+const supabase = createClient(supabaseUrl, supabaseKey)
